@@ -117,9 +117,8 @@ enum RunFlag
     /* If stream5 is configured, the STATEFUL flag is set.  This is
      * somewhat misnamed and is used to assure a session is established */
     RUN_FLAG__ASSURE_EST          = 0x02000000,
-    RUN_FLAG__SHOW_PLUGINS        = 0x04000000      // --show-plugins
 
-   ,RUN_FLAG__TREAT_DROP_AS_IGNORE= 0x10000000,     /* --treat-drop-as-ignore */
+    RUN_FLAG__TREAT_DROP_AS_IGNORE= 0x10000000,     /* --treat-drop-as-ignore */
     RUN_FLAG__PCAP_RELOAD         = 0x20000000,     /* --pcap-reload */
     RUN_FLAG__SHELL               = 0x40000000,     /* --shell */
     RUN_FLAG__TEST                = 0x80000000      /* -T */
@@ -152,8 +151,9 @@ enum LoggingFlag
 {
     LOGGING_FLAG__VERBOSE         = 0x00000001,      /* -v */
     LOGGING_FLAG__QUIET           = 0x00000002,      /* -q */
-    LOGGING_FLAG__SYSLOG          = 0x00000004       /* -M */
-
+    LOGGING_FLAG__SYSLOG          = 0x00000004,      /* -M */
+    LOGGING_FLAG__SHOW_PLUGINS    = 0x00000008,      // --show-plugins
+    LOGGING_FLAG__WARN_FLOWBITS   = 0x00000010,      // --warn-flowbits
 };
 
 enum TunnelFlags{
